[package]
name = "runtime-call-macro"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
parity-scale-codec = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
scale-info = { workspace = true }
subxt-metadata = { workspace = true }
syn = { workspace = true, features = ["full"] }
